# nba-games-with-friends

./: .cursorrules  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.local.yml  docker-compose.yml  manual_debug_sync.py  railway.json
.agent/memory/: active_pdca.md
.agent/skills/: README.md  SKILL.md
.agents/: AGENTS.md
.agents/rules/: deployment.md  subprojects.md
.claude/: settings.local.json
.github/workflows/: auto-pr.yml  (+9 more)
Prototype/: index.html
go-game-service/: go.mod  go.sum
infrastructure/: deploy.sh
nest-auth-service/: package-lock.json  package.json
py-data-sync-service/: .cursorrules  .dockerignore  .gitignore  CLI_NEW_USAGE.md  CLI_REFACTOR_PLAN.md  CLI_USAGE.md  FASTAPI_MIGRATION_PLAN.md  README.md  cli.py  config.py  fantasy-scoring.json  handler.py  main.py  requirements.txt  start-worker.sh  utils.py  worker.py
react-game-ui/: .cursorrules  .gitignore  FINAL_AUDIT_REPORT.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  components.json  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
services/ai-agent/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run_test.py  server.py
services/ai-agent/src/graph/: plan_and_execute.py  predictor.py  supervisor.py
services/ai-agent/src/layers/: models.py
services/ai-agent/src/models/: planner.py
services/ai-agent/src/tools/: __init__.py  db_tools.py  error_handler.py  lineup_tools.py  nba_tools.py  network_tools.py  vector_tools.py
services/ai-agent/src/utils/: logger.py
(+325 files in other folders)
