[project]
name = "nba-ai-agent"
version = "1.0.0"
description = "NBA Prediction Agent built with LangChain v1.0 and LangGraph v1.0"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]
